# tesseract_qt_py

./: .gitignore  README.md  SESSION.md  app.py  demo_ui.py  pyproject.toml  run_app.sh  test_frames.py  test_imports.py
.claude/: CLAUDE.md  settings.json
core/: PLANNING.md  __init__.py  camera_control.py  contact_viz.py  planning.py  scene_manager.py  state_manager.py
examples/: TOOLPATH_USAGE.md  contact_viz_README.md  contact_viz_example.py  fk_viz_demo.py  info_panel_demo.py  planning_example.py  tool_path_demo.py  workspace_demo.py
scripts/: activate_tesseract.sh  diagnose_task_composer.py
tests/: __init__.py  conftest.py  test_examples.py  test_loading.py  test_signals.py  test_widgets.py
tests/fixtures/: abb_irb2400.urdf  abb_irb2400_big.json  abb_irb2400_demo.json  abb_irb2400_kdl.srdf  abb_irb2400_kdl_plugins.yaml  iiwa7.srdf  iiwa7.urdf  sample_trajectory.json  trajectory_circular.json  trajectory_linear.json  trajectory_sinusoidal.json
widgets/: __init__.py  acm_editor.py  cartesian_editor.py  contact_compute_widget.py  environment_dialog.py  fkik_widget.py  group_states_editor.py  ik_widget.py  info_panel.py  joint_slider.py  kinematic_groups_editor.py  log_widget.py  manipulation_widget.py  plot_widget.py  render_widget.py  scene_tree.py  srdf_editor.py  studio_layout.py  task_composer_widget.py  tcp_editor.py  tool_path_dialog.py  trajectory_player.py
